this is keyshared working

--- a/WebSockets/src/main/resources/templates/example.html
+++ b/WebSockets/src/main/resources/templates/example.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <h1>WebSocket Client</h1>
-<h1>Welcome, <span th:text="${firstName}"></span>!</h1>
+<h1>Welcome, <span th:text="${username}"></span>!</h1>
 <h1> <span th:text="${ownerId}" id="ownerId"></span></h1>
+<h1> <span th:text="${userId}" id="userId"></span></h1>
 <div id="messages"></div>
 <div id="private-messages"></div>
 
