--- a/WebSockets/src/main/resources/templates/example.html
+++ b/WebSockets/src/main/resources/templates/example.html
@@ -4,16 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebSocket Client</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+        }
+
+        .header {
+            text-align: center;
+            color: #333;
+        }
+
+        .welcome {
+            text-align: center;
+            color: #555;
+        }
+
+        .user-info {
+            text-align: center;
+            color: #777;
+        }
+
+         .container {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .message-box {
+            border: 2px solid #ccc;
+            background-color: #fff;
+            padding: 5px;
+            width: 80%; /* You can adjust the width here */
+            max-width: 800px; /* Maximum width */
+            height: 100px; /* You can adjust the height here */
+            overflow-y: auto; /* Add scrollbar when content exceeds height */
+        }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </head>
 <body>
-<h1>WebSocket Client</h1>
-<h1>Welcome, <span th:text="${username}"></span>!</h1>
-<h1> <span th:text="${ownerId}" id="ownerId"></span></h1>
-<h1> <span th:text="${userId}" id="userId"></span></h1>
-<div id="messages"></div>
-<div id="private-messages"></div>
+<div class="container">
+    <div class="text-center">
+        <h1 class="display-4">WebSocket Client</h1>
+        <h1 class="welcome">Welcome, <span th:text="${username}" class="text-primary"></span>!</h1>
+        <h1>This is your OwnerId <span th:text="${ownerId}" id="ownerId" class="text-info"></span></h1>
+        <h1>This is your UserId <span th:text="${userId}" id="userId" class="text-info"></span></h1>
+        <div id="messages" class="message-box"></div>
+<!--        <div id="private-messages" class="message-box"></div>-->
+        <div id="Encrypted-messages" class="message-box"></div>
+    </div>
+</div>
 
 <script>
     // Function to display received messages
@@ -29,8 +75,46 @@
         document.getElementById('private-messages').appendChild(messageElement);
     }
 
+    function showMessage_Encrypted_messages(message) {
+        const messageElement = document.createElement('div');
+        messageElement.textContent = message;
+        document.getElementById('Encrypted-messages').appendChild(messageElement);
+    }
+
+    function handleSecretMessage(secretMessage) {
+        secretmessage_new = secretMessage;
+        console.log("secretmessage_new", secretmessage_new);
+        // Here you can do whatever you want with the secret message
+
+
+            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;
+            const ownerId = document.getElementById('ownerId').innerText;
+
+                 // Make AJAX request to server endpoint with private key
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch data');
+                    }
+                    return response.text();
+                })
+                .then(secretMessage => {
+                secretmessage_new = secretMessage;
+                    showMessage('Secret message from getsharedkey: ' + secretMessage);
+                     console.log("secretmessage_new from getsharedkey", secretmessage_new);
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+
+
+
+    }
+
+
 
     // Connect to WebSocket server
+    var secretmessage_new = "";
     const socket = new SockJS('/chat-websocket');
     const stompClient = Stomp.over(socket);
 
@@ -50,34 +134,34 @@
         stompClient.subscribe('/topic/chat', function (message) {
 
             console.log("message from topic "+message)
-            showMessage('Message received: ' + message.body);
+<!--            showMessage('Message received: ' + message.body);-->
             // Extract private key from the received message
             const privateKey = JSON.parse(message.body).text;
 
 
 
-            // Make AJAX request to server endpoint with private key
-            fetch('/api/socket/data?privatekey=' + encodeURIComponent(privateKey))
+<!--            // Make AJAX request to server endpoint with private key-->
+<!--            fetch('/api/socket/data?privatekey=' + encodeURIComponent(privateKey))-->
 
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Failed to fetch data');
-                    }
-                    return response.text();
-                })
-                .then(secretMessage => {
-                    showMessage('Secret message: ' + secretMessage);
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
+<!--                .then(response => {-->
+<!--                    if (!response.ok) {-->
+<!--                        throw new Error('Failed to fetch data');-->
+<!--                    }-->
+<!--                    return response.text();-->
+<!--                })-->
+<!--                .then(secretMessage => {-->
+<!--                    showMessage('Secret message: ' + secretMessage);-->
+<!--                })-->
+<!--                .catch(error => {-->
+<!--                    console.error('Error:', error);-->
+<!--                });-->
         });
 
           // Subscribe to the topic to receive messages
         stompClient.subscribe('/topic/public-key', function (message) {
 
             console.log("message from topic "+message)
-            showMessage('Message received: ' + message.body);
+<!--            showMessage('Message received: ' + message.body);-->
             // Extract private key from the received message
 
              // Parse the JSON message body
@@ -99,7 +183,7 @@
             // Make AJAX request to server endpoint with private key
             // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
             
-            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&publicKey=${encodeURIComponent(publicKey)}`;
+            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;
             const ownerId = document.getElementById('ownerId').innerText;
             if(ownerId===recId)
             {
@@ -112,13 +196,85 @@
                     return response.text();
                 })
                 .then(secretMessage => {
+                secretmessage_new = secretMessage;
                     showMessage('Secret message: ' + secretMessage);
+                    console.log("secretmessage_new"+secretmessage_new);
+                      handleSecretMessage(secretMessage);
                 })
                 .catch(error => {
                     console.error('Error:', error);
                 });
             }
+
+
+
+
            
+        });
+
+        console.log("secretmessage_new"+secretmessage_new);
+
+        // subscribe to Receive Encrypted message
+         // Subscribe to the topic to receive messages
+        stompClient.subscribe('/topic/EncryptedMessage', function (message_enc) {
+
+            console.log("message from topic "+message_enc)
+
+            // Extract private key from the received message
+
+             // Parse the JSON message body
+             const messageBody_enc1 = JSON.parse(message_enc.body);
+
+
+         // Extract values from the message body
+             const SenderId_enc = messageBody_enc1.senderId;
+             const RecId_enc = messageBody_enc1.recId;
+            const message_enc1 = messageBody_enc1.message;
+             console.log("Encrypted message"+message_enc1);
+            const time_enc = messageBody_enc1.time;
+
+            // Print the extracted values
+              console.log("SenderId"+ SenderId_enc);
+              console.log("RecId"+ RecId_enc);
+               console.log("RecId"+ time_enc);
+               var secretkeypass="Di3jyJYxTquIuVMvRrn6Ng==";
+               if(ownerId===RecId_enc)
+               {
+                   showMessage_Encrypted_messages('Message received: ' + message_enc.body);
+                   // Make AJAX request to server endpoint with private key
+            // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
+
+            const url = `/api/socket/getMessageDecrypted?encryptedMessage=${encodeURIComponent(message_enc1)}&senderid=${encodeURIComponent(SenderId_enc)}
+            &secretkey=${encodeURIComponent(secretkeypass)}&peerid=${encodeURIComponent(RecId_enc)}`;
+            const ownerId = document.getElementById('ownerId').innerText;
+
+                 // Make AJAX request to server endpoint with private key
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch data');
+                    }
+                    return response.text();
+                })
+                .then(secretMessage => {
+                secretmessage_new = secretMessage;
+                    showMessage('Secret message: ' + secretMessage);
+                    console.log("secretmessage_new"+secretmessage_new);
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+
+               }
+
+
+
+
+
+
+
+
+
         });
 
 
