--- a/WebSockets/src/main/resources/templates/example.html
+++ b/WebSockets/src/main/resources/templates/example.html
@@ -157,11 +157,65 @@
 <!--                });-->
         });
 
-          // Subscribe to the topic to receive messages
-        stompClient.subscribe('/topic/public-key', function (message) {
+<!--          // Subscribe to the topic to receive messages-->
+<!--        stompClient.subscribe('/topic/public-key', function (message) {-->
+
+<!--            console.log("message from topic "+message)-->
+<!--&lt;!&ndash;            showMessage('Message received: ' + message.body);&ndash;&gt;-->
+<!--            // Extract private key from the received message-->
+
+<!--             // Parse the JSON message body-->
+<!--             const messageBody = JSON.parse(message.body);-->
+
+
+<!--         // Extract values from the message body-->
+<!--            const publicKey = messageBody.publicKey;-->
+<!--            console.log("publickey"+publicKey);-->
+<!--            const senderId = messageBody.senderId;-->
+<!--            const recId = messageBody.recId;-->
+<!--            const time = messageBody.time;-->
+
+<!--            // Print the extracted values-->
+<!--&lt;!&ndash;            console.log("Public Key1: " + encodeURIComponent(publicKey));&ndash;&gt;-->
+<!--              console.log("senderId"+senderId);-->
+<!--              console.log("recId"+recId);-->
+
+<!--            // Make AJAX request to server endpoint with private key-->
+<!--            // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation-->
+<!--            -->
+<!--            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;-->
+<!--            const ownerId = document.getElementById('ownerId').innerText;-->
+<!--            if(ownerId===recId)-->
+<!--            {-->
+<!--                 // Make AJAX request to server endpoint with private key-->
+<!--            fetch(url)-->
+<!--                .then(response => {-->
+<!--                    if (!response.ok) {-->
+<!--                        throw new Error('Failed to fetch data');-->
+<!--                    }-->
+<!--                    return response.text();-->
+<!--                })-->
+<!--                .then(secretMessage => {-->
+<!--                secretmessage_new = secretMessage;-->
+<!--                    showMessage('Secret message: ' + secretMessage);-->
+<!--                    console.log("secretmessage_new"+secretmessage_new);-->
+<!--                      handleSecretMessage(secretMessage);-->
+<!--                })-->
+<!--                .catch(error => {-->
+<!--                    console.error('Error:', error);-->
+<!--                });-->
+<!--            }-->
+
+
+
+
+<!--           -->
+<!--        });-->
+
+        stompClient.subscribe('/topic/public_key_ca', function (message) {
 
             console.log("message from topic "+message)
-<!--            showMessage('Message received: ' + message.body);-->
+<!--            showMessage('Message received in public key ca: ' + message.body);-->
             // Extract private key from the received message
 
              // Parse the JSON message body
@@ -169,8 +223,10 @@
 
 
          // Extract values from the message body
-            const publicKey = messageBody.publicKey;
-            console.log("publickey"+publicKey);
+            const dh_publicKey = messageBody.dh_Pubkey;
+            console.log("dh_publicKey"+dh_publicKey);
+            const ca_Pubkey = messageBody.ca_Pubkey;
+            console.log("ca_Pubkey"+ca_Pubkey);
             const senderId = messageBody.senderId;
             const recId = messageBody.recId;
             const time = messageBody.time;
@@ -182,8 +238,57 @@
 
             // Make AJAX request to server endpoint with private key
             // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
-            
-            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;
+
+<!--            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;-->
+<!--            const ownerId = document.getElementById('ownerId').innerText;-->
+<!--            if(ownerId===recId)-->
+<!--            {-->
+<!--                 // Make AJAX request to server endpoint with private key-->
+<!--            fetch(url)-->
+<!--                .then(response => {-->
+<!--                    if (!response.ok) {-->
+<!--                        throw new Error('Failed to fetch data');-->
+<!--                    }-->
+<!--                    return response.text();-->
+<!--                })-->
+<!--                .then(secretMessage => {-->
+<!--                secretmessage_new = secretMessage;-->
+<!--                    showMessage('Secret message: ' + secretMessage);-->
+<!--                    console.log("secretmessage_new"+secretmessage_new);-->
+<!--                      handleSecretMessage(secretMessage);-->
+<!--                })-->
+<!--                .catch(error => {-->
+<!--                    console.error('Error:', error);-->
+<!--                });-->
+<!--            }-->
+
+
+
+
+
+        });
+
+
+                  // Subscribe to the topic to receive messages
+        stompClient.subscribe('/topic/peer-public-key', function (message) {
+                    console.log("message from topic peer-publice "+message)
+                    // Extract private key from the received message
+                    // Parse the JSON message body
+                    const messageBody = JSON.parse(message.body);
+                    // Extract values from the message body
+                    const publicKey = messageBody.publicKey;
+                    console.log("publickey"+publicKey);
+                    const senderId = messageBody.senderId;
+                    const recId = messageBody.recId;
+                    const time = messageBody.time;
+
+                    // Print the extracted values
+                    console.log("senderId"+senderId);
+                    console.log("recId"+recId);
+
+                    // Make AJAX request to server endpoint with private key
+                    // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
+            const url = `/api/socket/getkey_own_dh?Recid=${encodeURIComponent(recId)}&publickey=${encodeURIComponent(publicKey)}`;
             const ownerId = document.getElementById('ownerId').innerText;
             if(ownerId===recId)
             {
@@ -206,11 +311,7 @@
                 });
             }
 
-
-
-
-           
-        });
+                    });
 
         console.log("secretmessage_new"+secretmessage_new);
 
@@ -244,7 +345,10 @@
                    // Make AJAX request to server endpoint with private key
             // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
 
-            const url = `/api/socket/getMessageDecrypted?encryptedMessage=${encodeURIComponent(message_enc1)}&senderid=${encodeURIComponent(SenderId_enc)}
+            const url1 = `/api/socket/getMessageDecrypted?encryptedMessage=${encodeURIComponent(message_enc1)}&senderid=${encodeURIComponent(SenderId_enc)}
+            &secretkey=${encodeURIComponent(secretkeypass)}&peerid=${encodeURIComponent(RecId_enc)}`;
+
+             const url = `/api/socket/MessageDecrypted?encryptedMessage=${encodeURIComponent(message_enc1)}&senderid=${encodeURIComponent(SenderId_enc)}
             &secretkey=${encodeURIComponent(secretkeypass)}&peerid=${encodeURIComponent(RecId_enc)}`;
             const ownerId = document.getElementById('ownerId').innerText;
 
