--- a/WebSockets/src/main/resources/templates/example.html
+++ b/WebSockets/src/main/resources/templates/example.html
@@ -111,6 +111,137 @@
 
     }
 
+        function handleSharedkey(secretMessage) {
+        secretmessage_new = secretMessage;
+        console.log("secretmessage_new in handlesharedkey", secretmessage_new);
+        // Here you can do whatever you want with the secret message
+            const publicKey = secretmessage_new.publicKey;
+            console.log("publickey"+publicKey);
+
+            const senderId = secretmessage_new.senderId;
+            console.log("senderId"+senderId);
+            const recId = secretmessage_new.recId;
+            console.log("recId"+recId);
+            const time = secretmessage_new.time;
+
+            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;
+            const ownerId = document.getElementById('ownerId').innerText;
+
+                 // Make AJAX request to server endpoint with private key
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch data');
+                    }
+                    return response.text();
+                })
+                .then(secretMessage => {
+                secretmessage_new = secretMessage;
+                    showMessage('Secret message from getsharedkey: ' + secretMessage);
+                     console.log("secretmessage_new from getsharedkey", secretmessage_new);
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+                }
+
+          function  handlePublicKey(secretMessage)
+          {
+          const ownerId1=secretMessage.recId
+          secretmessage_new = secretMessage;
+           console.log("secretmessage_new in hadnlepublickey"+ownerId1+"is"+secretmessage_new);
+           // Extract values from the message body
+            const dh_publicKey = secretMessage.dh_Pubkey;
+            console.log("dh_publicKey"+secretmessage_new.dh_Pubkey);
+            const ca_Pubkey = secretMessage.ca_Pubkey;
+            console.log("ca_Pubkey"+ca_Pubkey);
+            const senderId = secretMessage.senderId;
+             console.log("senderId"+senderId);
+            const recId = secretMessage.recId;
+             console.log("recId"+recId);
+            const time = secretMessage.time;
+             console.log("time"+time);
+
+        // Here you can do whatever you want with the secret message
+
+            const url = `/api/socket/rec_dh_pub_key?encryptedmessage=${encodeURIComponent(dh_publicKey)}&publickey=${encodeURIComponent(ca_Pubkey)}&sendid=${encodeURIComponent(senderId)}&peerid=${encodeURIComponent(recId)}`;
+            const ownerId = document.getElementById('ownerId').innerText;
+
+                 // Make AJAX request to server endpoint with private key
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch data');
+                    }
+                    return response.text();
+                })
+                .then(secretMessage => {
+                secretmessage_new = secretMessage;
+                    showMessage('Secret message from handlepublic key: ' + secretMessage);
+                     console.log("secretmessage_new from rec_dh_pub_key"+ secretMessage);
+                     // Parse the JSON string into a JavaScript object
+                const secretMessageObject = JSON.parse(secretmessage_new);
+
+                // Access the publicKey property
+                const publicKey = secretMessageObject.publicKey;
+                console.log("publicKey"+publicKey);
+                     handleSharedkey(secretMessageObject);
+
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+
+          }
+          function  handlePublicKey_rec(secretMessage)
+          {
+          const ownerId1=secretMessage.recId
+          secretmessage_new = secretMessage;
+           console.log("secretmessage_new in hadnlepublickey"+ownerId1+"is"+secretmessage_new);
+           // Extract values from the message body
+            const dh_publicKey = secretMessage.dh_Pubkey;
+            console.log("dh_publicKey"+secretmessage_new.dh_Pubkey);
+            const ca_Pubkey = secretMessage.ca_Pubkey;
+            console.log("ca_Pubkey"+ca_Pubkey);
+            const senderId = secretMessage.senderId;
+             console.log("senderId"+senderId);
+            const recId = secretMessage.recId;
+             console.log("recId"+recId);
+            const time = secretMessage.time;
+             console.log("time"+time);
+
+        // Here you can do whatever you want with the secret message
+
+            const url = `/api/socket/rec_dh_pub_key_rec?encryptedmessage=${encodeURIComponent(dh_publicKey)}&sendid=${encodeURIComponent(senderId)}&peerid=${encodeURIComponent(recId)}`;
+            const ownerId = document.getElementById('ownerId').innerText;
+
+                 // Make AJAX request to server endpoint with private key
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch data');
+                    }
+                    return response.text();
+                })
+                .then(secretMessage => {
+                secretmessage_new = secretMessage;
+                    showMessage('Secret message from handlepublic key: ' + secretMessage);
+                     console.log("secretmessage_new from rec_dh_pub_key"+ secretMessage);
+                     // Parse the JSON string into a JavaScript object
+                const secretMessageObject = JSON.parse(secretmessage_new);
+
+                // Access the publicKey property
+                const publicKey = secretMessageObject.publicKey;
+                console.log("publicKey"+publicKey);
+                     handleSharedkey(secretMessageObject);
+
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+
+          }
+
 
 
     // Connect to WebSocket server
@@ -157,65 +288,11 @@
 <!--                });-->
         });
 
-<!--          // Subscribe to the topic to receive messages-->
-<!--        stompClient.subscribe('/topic/public-key', function (message) {-->
-
-<!--            console.log("message from topic "+message)-->
-<!--&lt;!&ndash;            showMessage('Message received: ' + message.body);&ndash;&gt;-->
-<!--            // Extract private key from the received message-->
-
-<!--             // Parse the JSON message body-->
-<!--             const messageBody = JSON.parse(message.body);-->
-
-
-<!--         // Extract values from the message body-->
-<!--            const publicKey = messageBody.publicKey;-->
-<!--            console.log("publickey"+publicKey);-->
-<!--            const senderId = messageBody.senderId;-->
-<!--            const recId = messageBody.recId;-->
-<!--            const time = messageBody.time;-->
-
-<!--            // Print the extracted values-->
-<!--&lt;!&ndash;            console.log("Public Key1: " + encodeURIComponent(publicKey));&ndash;&gt;-->
-<!--              console.log("senderId"+senderId);-->
-<!--              console.log("recId"+recId);-->
-
-<!--            // Make AJAX request to server endpoint with private key-->
-<!--            // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation-->
-<!--            -->
-<!--            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;-->
-<!--            const ownerId = document.getElementById('ownerId').innerText;-->
-<!--            if(ownerId===recId)-->
-<!--            {-->
-<!--                 // Make AJAX request to server endpoint with private key-->
-<!--            fetch(url)-->
-<!--                .then(response => {-->
-<!--                    if (!response.ok) {-->
-<!--                        throw new Error('Failed to fetch data');-->
-<!--                    }-->
-<!--                    return response.text();-->
-<!--                })-->
-<!--                .then(secretMessage => {-->
-<!--                secretmessage_new = secretMessage;-->
-<!--                    showMessage('Secret message: ' + secretMessage);-->
-<!--                    console.log("secretmessage_new"+secretmessage_new);-->
-<!--                      handleSecretMessage(secretMessage);-->
-<!--                })-->
-<!--                .catch(error => {-->
-<!--                    console.error('Error:', error);-->
-<!--                });-->
-<!--            }-->
-
-
-
-
-<!--           -->
-<!--        });-->
-
-        stompClient.subscribe('/topic/public_key_ca', function (message) {
+          // Subscribe to the topic to receive messages
+        stompClient.subscribe('/topic/public-key', function (message) {
 
             console.log("message from topic "+message)
-<!--            showMessage('Message received in public key ca: ' + message.body);-->
+<!--            showMessage('Message received: ' + message.body);-->
             // Extract private key from the received message
 
              // Parse the JSON message body
@@ -223,10 +300,8 @@
 
 
          // Extract values from the message body
-            const dh_publicKey = messageBody.dh_Pubkey;
-            console.log("dh_publicKey"+dh_publicKey);
-            const ca_Pubkey = messageBody.ca_Pubkey;
-            console.log("ca_Pubkey"+ca_Pubkey);
+            const publicKey = messageBody.publicKey;
+            console.log("publickey"+publicKey);
             const senderId = messageBody.senderId;
             const recId = messageBody.recId;
             const time = messageBody.time;
@@ -239,56 +314,7 @@
             // Make AJAX request to server endpoint with private key
             // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
 
-<!--            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;-->
-<!--            const ownerId = document.getElementById('ownerId').innerText;-->
-<!--            if(ownerId===recId)-->
-<!--            {-->
-<!--                 // Make AJAX request to server endpoint with private key-->
-<!--            fetch(url)-->
-<!--                .then(response => {-->
-<!--                    if (!response.ok) {-->
-<!--                        throw new Error('Failed to fetch data');-->
-<!--                    }-->
-<!--                    return response.text();-->
-<!--                })-->
-<!--                .then(secretMessage => {-->
-<!--                secretmessage_new = secretMessage;-->
-<!--                    showMessage('Secret message: ' + secretMessage);-->
-<!--                    console.log("secretmessage_new"+secretmessage_new);-->
-<!--                      handleSecretMessage(secretMessage);-->
-<!--                })-->
-<!--                .catch(error => {-->
-<!--                    console.error('Error:', error);-->
-<!--                });-->
-<!--            }-->
-
-
-
-
-
-        });
-
-
-                  // Subscribe to the topic to receive messages
-        stompClient.subscribe('/topic/peer-public-key', function (message) {
-                    console.log("message from topic peer-publice "+message)
-                    // Extract private key from the received message
-                    // Parse the JSON message body
-                    const messageBody = JSON.parse(message.body);
-                    // Extract values from the message body
-                    const publicKey = messageBody.publicKey;
-                    console.log("publickey"+publicKey);
-                    const senderId = messageBody.senderId;
-                    const recId = messageBody.recId;
-                    const time = messageBody.time;
-
-                    // Print the extracted values
-                    console.log("senderId"+senderId);
-                    console.log("recId"+recId);
-
-                    // Make AJAX request to server endpoint with private key
-                    // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
-            const url = `/api/socket/getkey_own_dh?Recid=${encodeURIComponent(recId)}&publickey=${encodeURIComponent(publicKey)}`;
+            const url = `/api/socket/getsharedkey?Recid=${encodeURIComponent(recId)}&SenderId=${encodeURIComponent(senderId)}&publicKey=${encodeURIComponent(publicKey)}`;
             const ownerId = document.getElementById('ownerId').innerText;
             if(ownerId===recId)
             {
@@ -305,6 +331,107 @@
                     showMessage('Secret message: ' + secretMessage);
                     console.log("secretmessage_new"+secretmessage_new);
                       handleSecretMessage(secretMessage);
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+            }
+
+
+
+
+
+        });
+
+        stompClient.subscribe('/topic/public_key_ca', function (message) {
+            console.log("message from topic public_key_ca "+message)
+            // Extract private key from the received message
+
+            // Parse the JSON message body
+             const messageBody = JSON.parse(message.body);
+
+         // Extract values from the message body
+            const dh_publicKey = messageBody.dh_Pubkey;
+            console.log("dh_publicKey"+dh_publicKey);
+            const ca_Pubkey = messageBody.ca_Pubkey;
+            console.log("ca_Pubkey"+ca_Pubkey);
+            const senderId = messageBody.senderId;
+            const recId = messageBody.recId;
+            const time = messageBody.time;
+
+            // Print the extracted values
+              console.log("senderId"+senderId);
+              console.log("recId"+recId);
+              console.log("this is public_key_ca_topic");
+              if(ownerId===recId)
+                {
+
+                 handlePublicKey(messageBody);
+                }
+
+        });
+
+             stompClient.subscribe('/topic/public_key_ca_rec', function (message) {
+            console.log("message from topic public_key_ca "+message)
+            // Extract private key from the received message
+
+            // Parse the JSON message body
+             const messageBody = JSON.parse(message.body);
+
+         // Extract values from the message body
+            const dh_publicKey = messageBody.dh_Pubkey;
+            console.log("dh_publicKey"+dh_publicKey);
+            const ca_Pubkey = messageBody.ca_Pubkey;
+            console.log("ca_Pubkey"+ca_Pubkey);
+            const senderId = messageBody.senderId;
+            const recId = messageBody.recId;
+            const time = messageBody.time;
+
+            // Print the extracted values
+              console.log("senderId"+senderId);
+              console.log("recId"+recId);
+              if(ownerId===recId)
+                {
+                    console.log("this is public_key_ca_rec");
+                 handlePublicKey_rec(messageBody);
+                }
+
+        });
+
+
+                  // Subscribe to the topic to receive messages
+        stompClient.subscribe('/topic/peer-public-key', function (message) {
+                    console.log("message from topic peer-publice "+message)
+                    // Extract private key from the received message
+                    const messageBody = JSON.parse(message.body);
+                    // Extract values from the message body
+                    const publicKey = messageBody.publicKey;
+                    console.log("publickey"+publicKey);
+                    const senderId = messageBody.senderId;
+                    const recId = messageBody.recId;
+                    const time = messageBody.time;
+
+                    // Print the extracted values
+                    console.log("senderId"+senderId);
+                    console.log("recId"+recId);
+
+                    // Make AJAX request to server endpoint with private key
+                    // Construct the URL with query parameters using backticks (`) and ${} syntax for interpolation
+            const url = `/api/socket/getkey_own_dh?Recid=${encodeURIComponent(senderId)}&publickey=${encodeURIComponent(publicKey)}`;
+            const ownerId = document.getElementById('ownerId').innerText;
+            if(ownerId===recId)
+            {
+                 // Make AJAX request to server endpoint with private key
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch data');
+                    }
+                    return response.text();
+                })
+                .then(secretMessage => {
+                secretmessage_new = secretMessage;
+                    console.log("secretmessage_new in "+ownerId+"is"+secretmessage_new);
                 })
                 .catch(error => {
                     console.error('Error:', error);
